--- a/Day 1/react/library-management/package.json
+++ b/Day 1/react/library-management/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.7",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
