--- a/react/library-management/package.json
+++ b/react/library-management/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
@@ -19,7 +20,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
